# VLMDemo

./: .env  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/src/: config.py  ui.py
app/src/services/: internvl_service.py
app/src/state/: session_store.py
app/src/utils/: image_ops.py  validation.py
